# rules_jupyter

./: .bazelrc  404.html  MODULE.bazel  README.md  WORKSPACE.bazel  index.html  print.html  rules.html  searchindex.js  searchindex.json  version.bzl
.bcr/: metadata.template.json  source.template.json
.github/: github.bazelrc  release_notes.template
.github/workflows/: ci.yaml  compile-requirements-examples.yaml  release.yaml
docs/: BUILD.bazel  book.toml
docs/src/: index.md
examples/rust_kernel/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  extensions.bzl  notebook.ipynb
examples/rust_kernel/requirements/: BUILD.bazel  requirements_macos_aarch64.txt  requirements_windows_x86_64.txt
examples/simple/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  notebook.py
examples/simple/requirements/: requirements.in  requirements_linux_aarch64.txt  requirements_linux_x86_64.txt  requirements_macos_aarch64.txt  requirements_windows_x86_64.txt
jupyter/: BUILD.bazel  defs.bzl  extensions.bzl  jupyter_kernel.bzl  jupyter_lab.bzl  jupyter_notebook.bzl  jupyter_notebook_binary.bzl  jupyter_notebook_test.bzl  jupyter_report.bzl  jupyter_toolchain.bzl  overrides.json  requirements.in
jupyter/playwright/: BUILD.bazel
jupyter/playwright/private/: BUILD.bazel  browser_versions.bzl  browsers.bzl  chromium_headless_shell_versions.bzl  chromium_versions.bzl  extensions.bzl  ffmpeg_versions.bzl  firefox_versions.bzl  playwright.bzl  webkit_versions.bzl
jupyter/playwright/private/tests/: requirements_parser_test_suite.bzl
jupyter/private/: BUILD.bazel  jupyter.bzl  kernel.bzl  pandoc.bzl  pandoc_versions.bzl  providers.bzl  rules_venv_aspects.bzl  toolchain.bzl
jupyter/private/tests/: BUILD.bazel
jupyter/private/tests/jupyter_notebook/: BUILD.bazel  simple.ipynb
jupyter/private/tests/jupyter_notebook_test/: passing_notebook.ipynb
jupyter/private/tests/reports_ipynb/: notebook.ipynb
jupyter/private/tests/reports_py/: BUILD.bazel  notebook.py
jupyter/private/tests/with_args/: BUILD.bazel  notebook_with_args.ipynb  notebook_with_args.py
jupyter/private/tests/with_data/: BUILD.bazel  config.json  notebook_with_data.ipynb  notebook_with_data.py
jupyter/private/tests/with_deps/: BUILD.bazel  notebook.ipynb  notebook.py
jupyter/private/tests/with_env/: BUILD.bazel  notebook_with_env.py
playwright/: BUILD.bazel
playwright/ld_library_dir/: BUILD.bazel  ld_library_dir.bzl
playwright/ld_library_path/: BUILD.bazel  generate_chromium_ld_library_path.py  generate_chromium_sysroot.py  ld_library_dir.bzl  sysroot.bzl
playwright/ld_library_path/private/: BUILD.bazel  generator.py
playwright/private/: BUILD.bazel  browser_versions.bzl  chromium_headless_shell_versions.bzl  chromium_versions.bzl  extensions.bzl  ffmpeg_versions.bzl  firefox_versions.bzl  playwright.bzl  playwright_install.py  playwright_install_test.py  requirements_parser.bzl  sysroot.bzl  sysroot_overlay.py  sysroot_packages.bzl  webkit_versions.bzl
playwright/private/tests/: BUILD.bazel  requirements_parser_test_suite.bzl
playwright/settings/: BUILD.bazel
tests/jupyter_lab/: BUILD.bazel  data.txt  notebook.ipynb
tests/jupyter_notebook_binary/: BUILD.bazel
tests/jupyter_notebook_test/: BUILD.bazel
tests/non_jupytext/: BUILD.bazel  notebook.py
tests/reports_ipynb/: BUILD.bazel
tests/with_args/: BUILD.bazel  notebook_with_args.ipynb  notebook_with_args.py  notebook_without_args.py
tests/with_data/: BUILD.bazel  data.txt  notebook_with_data.ipynb  notebook_with_data.py
tests/with_dep_ext/: BUILD.bazel  notebook.py
tests/with_deps/lib/: BUILD.bazel  __init__.py  utils.py
tests/with_deps/notebook/: BUILD.bazel  notebook_with_lib.ipynb  notebook_with_lib.py
tests/with_env/: notebook_with_env.ipynb  notebook_with_env.py
tests/with_exporter_args/: BUILD.bazel  notebook.py  validate_exporter_args_test.py
tests/with_graphs/: BUILD.bazel  notebook.py  validate_report_test.py
tools/bzl_version/: BUILD.bazel  bzl_version_test.py
tools/debian/: BUILD.bazel  debian_archive.bzl
tools/process_wrappers/: BUILD.bazel  autorun.js  autorun_transform.py  compiler.py  ibazel_handler.py  ibazel_reload.js  lab_launcher.py  playwright_install.py  reporter.py  reporter_test.py  runner.py  tester.py
tools/requirements/: BUILD.bazel  dev_requirements.in  requirements_linux_aarch64.txt  requirements_linux_x86_64.txt  requirements_macos_aarch64.txt  requirements_windows_x86_64.txt
tools/toolchains/: BUILD.bazel
tools/update_versions/: BUILD.bazel  update_chromium_sysroot.py  update_pandoc.py  update_playwright_browsers.py
