load("@rules_jupyter//jupyter:jupyter_kernel.bzl", "jupyter_kernel")
load("@rules_jupyter//jupyter:jupyter_notebook.bzl", "jupyter_notebook")
load("@rules_jupyter//jupyter:jupyter_report.bzl", "jupyter_report")
load("@rules_jupyter//jupyter:jupyter_toolchain.bzl", "jupyter_toolchain")

# Declare the evcxr Rust kernel so it is available inside Bazel's sandbox.
jupyter_kernel(
    name = "rust_kernel",
    args = ["--control_file", "{connection_file}"],
    binary = "@evcxr_jupyter",
    display_name = "Rust",
    interrupt_mode = "message",
    kernel_name = "rust",
    language = "rust",
)

# Define a jupyter toolchain with the Rust kernel registered.
jupyter_toolchain(
    name = "py_jupyter_toolchain",
    jupyter = "@pip_deps//jupyter",
    jupytext = "@pip_deps//jupytext",
    kernels = [":rust_kernel"],
    pandoc = "@pandoc",
    playwright_browsers_dir = "@rules_jupyter//jupyter/playwright:current_browsers_dir",
)

toolchain(
    name = "jupyter_toolchain",
    toolchain = ":py_jupyter_toolchain",
    toolchain_type = "@rules_jupyter//jupyter:toolchain_type",
)

# Use the notebook with Rust kernel
jupyter_notebook(
    name = "notebook",
    src = "notebook.ipynb",
    kernel = "rust",
)

# Generate a markdown report from the notebook
jupyter_report(
    name = "report_markdown",
    notebook = ":notebook",
    out_markdown = "report.md",
)

# Generate a pdf report from the notebook
jupyter_report(
    name = "report_pdf",
    notebook = ":notebook",
    out_webpdf = "report.pdf",
)
