"""Example using rules_jupyter with a .py notebook file.

This example is designed to be built from within the examples/simple directory.
It uses local_path_override to reference the parent rules_jupyter module.
"""

module(
    name = "jupyter_example",
    version = "0.0.0",
)

bazel_dep(name = "rules_req_compile", version = "1.0.0rc41")
bazel_dep(name = "rules_jupyter", version = "0.0.0")
bazel_dep(name = "platforms", version = "1.0.0")

# Override to use local path to parent rules_jupyter module
local_path_override(
    module_name = "rules_jupyter",
    path = "../..",
)

# Use the jupyter extension to set up pandoc (needed for markdown reports)
jupyter = use_extension("@rules_jupyter//jupyter:extensions.bzl", "jupyter")
jupyter.pandoc(
    name = "pandoc",
)
use_repo(
    jupyter,
    "pandoc",
)

playwright = use_extension("@rules_jupyter//jupyter:extensions.bzl", "playwright")
playwright.toolchain(
    name = "playwright_toolchains",
    version = "1.57.0",
)
use_repo(playwright, "playwright_toolchains")

# Use the requirements extension to set up Python dependencies
requirements = use_extension("@rules_req_compile//extensions:python.bzl", "requirements")
requirements.parse(
    name = "pip_deps",
    requirements_locks = {
        "//requirements:requirements_linux_aarch64.txt": "//requirements:linux-aarch64",
        "//requirements:requirements_linux_x86_64.txt": "//requirements:linux-x86_64",
        "//requirements:requirements_macos_aarch64.txt": "//requirements:macos-aarch64",
        "//requirements:requirements_windows_x86_64.txt": "//requirements:windows-x86_64",
    },
)
use_repo(requirements, "pip_deps")

register_toolchains(
    "@playwright_toolchains//:all",
    "//:jupyter_toolchain",
)
