load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_venv//python:py_binary.bzl", "py_binary")

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = ["//playwright:__subpackages__"],
)

py_binary(
    name = "playwright_install",
    srcs = ["playwright_install.py"],
    visibility = ["//visibility:public"],
)
