load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

bool_flag(
    name = "experimental_embedded_linux_chrome_sys_libs",
    build_setting_default = True,
    visibility = ["//visibility:public"],
)

config_setting(
    name = "embedded_linux_chrome_sys_libs_enabled",
    flag_values = {
        ":experimental_embedded_linux_chrome_sys_libs": "True",
    },
    visibility = ["//visibility:public"],
)
