# Note that this package exists outside of `//jupyter` to avoid conflicting
# with the existing `jupyter` import path.

load("@rules_venv//python:py_binary.bzl", "py_binary")

exports_files([
    "autorun.js",
    "autorun_transform.py",
    "compiler.py",
    "lab_launcher.py",
    "playwright_install.py",
    "reporter.py",
    "tester.py",
])

py_binary(
    name = "compiler",
    srcs = ["compiler.py"],
    visibility = ["//visibility:public"],
    deps = ["//jupyter:current_jupytext_toolchain"],
)

py_binary(
    name = "reporter",
    srcs = ["reporter.py"],
    visibility = ["//visibility:public"],
    deps = ["//jupyter:current_jupyter_toolchain"],
)

py_binary(
    name = "tester",
    srcs = ["tester.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":reporter",
        "@rules_venv//python/runfiles",
    ],
)

py_binary(
    name = "lab_launcher",
    srcs = ["lab_launcher.py"],
    data = [
        "autorun.js",
        "autorun_transform.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":reporter",
        "@rules_venv//python/runfiles",
    ],
)

py_binary(
    name = "playwright_install",
    srcs = ["playwright_install.py"],
    visibility = ["//visibility:public"],
)
