# Note that this package exists outside of `//jupyter` to avoid conflicting
# with the existing `jupyter` import path.

load("@rules_venv//python:py_binary.bzl", "py_binary")
load("@rules_venv//python:py_library.bzl", "py_library")

exports_files([
    "autorun.js",
    "autorun_transform.py",
    "compiler.py",
    "ibazel_handler.py",
    "ibazel_reload.js",
    "lab_launcher.py",
    "reporter.py",
    "runner.py",
    "tester.py",
])

py_binary(
    name = "compiler",
    srcs = ["compiler.py"],
    visibility = ["//visibility:public"],
    deps = ["//jupyter:current_jupytext_toolchain"],
)

py_binary(
    name = "reporter",
    srcs = ["reporter.py"],
    visibility = ["//visibility:public"],
    deps = ["//jupyter:current_jupyter_toolchain"],
)

py_binary(
    name = "tester",
    srcs = ["tester.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":reporter",
        "@rules_venv//python/runfiles",
    ],
)

py_binary(
    name = "runner",
    srcs = ["runner.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":reporter",
        ":tester",
        "@rules_venv//python/runfiles",
    ],
)

py_binary(
    name = "lab_launcher",
    srcs = ["lab_launcher.py"],
    data = [
        "autorun.js",
        "autorun_transform.py",
        "ibazel_reload.js",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":ibazel_handler",
        ":reporter",
        "@rules_venv//python/runfiles",
    ],
)

py_library(
    name = "ibazel_handler",
    srcs = ["ibazel_handler.py"],
    visibility = ["//visibility:public"],
    deps = ["//jupyter:current_jupyter_toolchain"],
)
