load("@rules_venv//python/black:defs.bzl", "py_black_toolchain")
load("@rules_venv//python/isort:defs.bzl", "py_isort_toolchain")
load("@rules_venv//python/mypy:defs.bzl", "py_mypy_toolchain")
load("@rules_venv//python/pylint:defs.bzl", "py_pylint_toolchain")
load("@rules_venv//python/pytest:defs.bzl", "py_pytest_toolchain")
load("//jupyter:jupyter_toolchain.bzl", "jupyter_toolchain")

package(default_visibility = ["//visibility:public"])

py_black_toolchain(
    name = "py_black_toolchain",
    black = "@pip_deps//black",
)

toolchain(
    name = "black_toolchain",
    toolchain = ":py_black_toolchain",
    toolchain_type = "@rules_venv//python/black:toolchain_type",
)

py_isort_toolchain(
    name = "py_isort_toolchain",
    isort = "@pip_deps//isort",
)

toolchain(
    name = "isort_toolchain",
    toolchain = ":py_isort_toolchain",
    toolchain_type = "@rules_venv//python/isort:toolchain_type",
)

py_mypy_toolchain(
    name = "py_mypy_toolchain",
    mypy = "@pip_deps//mypy",
)

toolchain(
    name = "mypy_toolchain",
    toolchain = ":py_mypy_toolchain",
    toolchain_type = "@rules_venv//python/mypy:toolchain_type",
)

py_pylint_toolchain(
    name = "py_pylint_toolchain",
    pylint = "@pip_deps//pylint",
)

toolchain(
    name = "pylint_toolchain",
    toolchain = ":py_pylint_toolchain",
    toolchain_type = "@rules_venv//python/pylint:toolchain_type",
)

py_pytest_toolchain(
    name = "py_pytest_toolchain",
    pytest = "@pip_deps//pytest_cov",
)

toolchain(
    name = "pytest_toolchain",
    toolchain = ":py_pytest_toolchain",
    toolchain_type = "@rules_venv//python/pytest:toolchain_type",
)

jupyter_toolchain(
    name = "py_jupyter_toolchain",
    jupyter = "@pip_deps//jupyter",
    jupytext = "@pip_deps//jupytext",
    pandoc = "@pandoc",
    playwright_browsers_dir = "//jupyter/playwright:current_browsers_dir",
)

toolchain(
    name = "jupyter_toolchain",
    toolchain = ":py_jupyter_toolchain",
    toolchain_type = "//jupyter:toolchain_type",
)
