load("@rules_venv//python:py_binary.bzl", "py_binary")

py_binary(
    name = "update_pandoc",
    srcs = ["update_pandoc.py"],
)

py_binary(
    name = "update_playwright_browsers",
    srcs = ["update_playwright_browsers.py"],
)

py_binary(
    name = "update_chromium_sysroot",
    srcs = ["update_chromium_sysroot.py"],
)
